# ada_project3

./: .gitignore  README.md  analyze_ab_test.py  pyproject.toml  update_report_tables.py
data/: processed_data.csv  shiny_user_data.csv
notebooks/: exploratory_analysis.ipynb
reports/: final_report.md  statistical_results.json
src/: data_analysis.py  statistical_tests.py  visualization.py
