[tool.poetry]
name = "ada-project3"
version = "0.1.0"
description = ""
authors = ["alexfriedman <alex.friedman@modo.energy>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.0.0"
numpy = "^1.23.0"
plotly = "^5.13.0"
scipy = "^1.9.0"
statsmodels = "^0.13.0"
jupyter = "^1.0.0"
nbformat = "^5.7.0"
ipywidgets = "^8.0.0"  # For interactive widgets in Jupyter
ipykernel = "^6.0.0"  # For Jupyter kernel
python-dotenv = "^1.0.0"  # For environment variables
kaleido = "0.2.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
black = "^23.3.0"
isort = "^5.12.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.isort]
profile = "black"
line_length = 88
